// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputForm renders correctly 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform "
    onChange={[Function]}
  />
  <div
    className="error-message none"
  />
</form>
`;

exports[`InputForm renders error and message 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform error"
    onChange={[Function]}
  />
  <div
    className="error-message "
  >
    Error message
  </div>
</form>
`;

exports[`InputForm renders success 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform success"
    onChange={[Function]}
  />
  <div
    className="error-message none"
  />
</form>
`;

exports[`InputForm renders value 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform "
    onChange={[Function]}
    value="textfortest"
  />
  <div
    className="error-message none"
  />
</form>
`;
